# protoc-gen-crpc

./: .gitignore  .gitmodules  Makefile  README.md  crpc.go  crpc.proto  go.mod  go.sum  grpc.go  main.go
call/: call.go  crpc.pb.go  readme.md
dlsym/: dlsm.go  dlsym_stubs.go  dlsym_windows.go
example/: Makefile  README.md  example.go  go.mod  go.sum  helloworld.proto  main.go
example/clay/: CMakeLists.txt  app.cpp  app.h  dyc.sln  dyc.vcxproj  dyc.vcxproj.filters  helloworld.pb.cc  helloworld.pb.h  helloworld_app.cpp  helloworld_client.cpp  helloworld_client.h  helloworld_export.cpp  helloworld_export.h  helloworld_service.cpp  helloworld_service.h  helloworldapp.cpp  my_app.cpp
example/clay/lib/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
example/clay/lib/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
example/golay/: helloworld.go  helloworld.pb.go  helloworld_grpc.pb.go
static/: static.go
static/clay/: app.cpp  app.h  client.cpp  client.h  export.cpp  export.h  my_app.cpp  service.cpp  service.h
static/golay/: hello.gotpl
